fixed left align for Reena's text

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -383,7 +383,7 @@ strong {
   .reena-text {
     flex: none;
     width: 100%;
-    text-align: center;
+    text-align: left;
   }
 
   .divider {
